--- a/public/admin/first.html
+++ b/public/admin/first.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="css/common.css">
 </head>
 
@@ -68,25 +69,25 @@
 
       <!-- 内容区域 -->
       <div class="content">
-        <table class="table table-bordered table-striped">
+        <button class="btn btn-default mb_20 btn_add">添加分类</button>
+
+        <table class="table table-bordered table-striped mt_15">
           <thead>
             <tr>
-              <td>序号</td>
-              <td>序号名</td>
-              <td>手机名</td>
-              <td>状态</td>
-              <td>操作</td>
+              <th width="20%">序号</th>
+              <th width="80%">名称</th>
             </tr>
           </thead>
           <tbody>
             <!-- 坑 -->
           </tbody>
         </table>
-
+        <!-- 分页基本结构 -->
         <div class="text-right">
           <ul id="paginator">
           </ul>
         </div>
+
       </div>
 
     </div>
@@ -119,48 +120,43 @@
     </div>
   </div>
 
-  <!-- 启用禁用模态框 -->
-  <div class="modal fade" tabindex="-1" id="userModal">
+  <!-- 一级分类添加模态框 -->
+  <div class="modal fade" tabindex="-1" id="addModal">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <h4 class="modal-title">温馨提示</h4>
+          <h4 class="modal-title">添加分类</h4>
         </div>
-        <div class="modal-body">
-          <p class="text-danger">
-            <span class="glyphicon glyphicon-info-sign"></span>
-            您确定要退出后台管理系统吗？
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-          <button type="button" class="btn btn-primary btn_update">确定</button>
-        </div>
+
+        <form>
+          <div class="modal-body">
+            <!-- 这个结构不能自己写，去bootstrap官网拷贝 -->
+            <div class="form-group">
+              <input type="text" name="categoryName" class="form-control" placeholder="请输入一级分类的名称">
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="submit" class="btn btn-primary btn_confirm">添加</button>
+          </div>
+        </form>
+
       </div>
     </div>
   </div>
 
-  <script type="text/html" id="tpl">
 
+  <script type="text/html" id="tpl">
     {{each rows v i}}
     <tr>
-      <td>{{(page-1)*size +(i +1)}}</td>
-      <td>{{v.username}}</td>
-      <td>{{v.mobile}}</td>
-      <td>{{ v.isDelete=='1'?'正常':'禁用' }}</td>
-      <td data-id="{{v.id}}">
-        {{if v.isDelete==0}}
-        <button class="btn btn-success btn-sm">启用</button>
-        {{/if}} {{if v.isDelete==1}}
-        <button class="btn btn-danger btn-sm">禁用</button>
-        {{/if}}
-      </td>
+      <td>{{(page-1)*size+i+1}}</td>
+      <td>{{v.categoryName}}</td>
     </tr>
     {{/each}}
-
   </script>
 
   <script src="lib/jquery/jquery.js"></script>
@@ -168,8 +164,9 @@
   <script src="lib/nprogress/nprogress.js"></script>
   <script src="lib/artTemplate/template-web.js"></script>
   <script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+  <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="js/common.js"></script>
-  <script src="js/user.js"></script>
+  <script src="js/first.js"></script>
 </body>
 
 </html>
